# conversation-quality-filter

./: .coverage  LICENSE  README.md  pyproject.toml
src/conversation_quality_filter/: __init__.py  audit.py  cli.py  detectors.py  filters.py
tests/: conftest.py  test_audit.py  test_cli.py  test_detectors.py  test_filters.py
tests/fixtures/: multi_turn_samples.jsonl  single_turn_samples.jsonl
